Added items.css and footer.css

--- a/applications/ecommerce/styles/categories.css
+++ b/applications/ecommerce/styles/categories.css
@@ -1,3 +1,7 @@
+.categories {
+  padding-left: var(--med-size);
+}
+
 .categories > ul {
   display: flex;
   flex-direction: column;
@@ -5,4 +9,24 @@
   gap: var(--med-size);
 
   background-color: var(--black);
+}
+
+.categories li {
+  width: 100%;
+}
+
+.categories button {
+  background-color: var(--primary-button);
+  min-height: var(--huge-size);
+  border-radius: var(--med-border-radius);
+
+  width: 100%;
+}
+
+.categories a {
+  color: var(--white);
+}
+
+.categories a:hover {
+  font-weight: bold;
 }
