--- a/applications/ecommerce/styles/global.css
+++ b/applications/ecommerce/styles/global.css
@@ -15,6 +15,7 @@
   --light-gray: #f1f3f5;
   --extra-light-gray: #f8f9fa;
   --white: #fff;
+  --medium-green: #20c997;
 
   /* Bootstrap buttons*/
   --primary-button: #337ab7;
