Added signup page

--- a/applications/ecommerce/styles/header.css
+++ b/applications/ecommerce/styles/header.css
@@ -3,7 +3,6 @@ header {
   justify-content: space-between;
   align-items: center;
 
-  background-color: var(--black);
   color: var(--white);
 
   padding: var(--med-size);
@@ -14,5 +13,8 @@ header > button {
   background-color: var(--primary-button);
   padding: var(--small-size) var(--med-size);
   border-radius: var(--med-border-radius);
+}
+
+header a {
   color: var(--white);
 }
