--- a/applications/ecommerce/styles/global.css
+++ b/applications/ecommerce/styles/global.css
@@ -47,6 +47,25 @@ ul {
   padding: 0;
 }
 
+.container {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: var(--black);
+  line-height: 1.4;
+  letter-spacing: 0.01em;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Sansita", serif;
+}
+
 li {
   list-style-type: none;
 }
@@ -57,4 +76,13 @@ a {
 
 button {
   cursor: pointer;
+  font-size: 1rem;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
