--- a/applications/ecommerce/styles/items.css
+++ b/applications/ecommerce/styles/items.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: var(--small-size);
+
+  padding-right: var(--med-size);
 }
 
 .items li {
@@ -16,6 +18,7 @@
 
   padding: var(--small-size);
   border: 1px solid lightgray;
+  border-radius: var(--med-border-radius);
 
   background-color: var(--light-gray);
 }
