Added state to class components

--- a/applications/ecommerce-react/public/styles/categories.css
+++ b/applications/ecommerce-react/public/styles/categories.css
@@ -19,12 +19,13 @@
   border-radius: var(--med-border-radius);
 
   width: 100%;
-}
-
-.categories a {
   color: var(--white);
 }
 
 .categories a:hover {
   font-weight: bold;
+}
+
+.categories .selected-category {
+  background-color: var(--warning-button);
 }
