--- a/applications/ecommerce-react/public/styles/app.css
+++ b/applications/ecommerce-react/public/styles/app.css
@@ -3,5 +3,6 @@
 @import url("header.css");
 @import url("items.css");
 @import url("categories.css");
+@import url("cartSummary.css");
 @import url("footer.css");
 @import url("login.css");
