--- a/applications/ecommerce-react/public/styles/layout.css
+++ b/applications/ecommerce-react/public/styles/layout.css
@@ -1,11 +1,11 @@
 .container {
   display: grid;
   grid-template-rows: auto auto auto;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: auto;
   grid-template-areas:
-    "header header"
-    "categories items"
-    "footer footer";
+    "header"
+    "main"
+    "footer";
   row-gap: var(--large-size);
   column-gap: var(--large-size);
 }
@@ -14,12 +14,27 @@ header {
   grid-area: header;
 }
 
+main {
+  grid-area: main;
+}
+
+.products-page {
+  display: flex;
+  gap: var(--large-size);
+}
+
 .categories {
   grid-area: categories;
 }
 
 .items {
   grid-area: items;
+}
+
+.cart-page {
+  display: flex;
+  gap: var(--large-size);
+  flex-direction: column;
 }
 
 footer {
